--- a/index.html
+++ b/index.html
@@ -8,14 +8,14 @@
   <!-- styles -->
   <link rel="stylesheet" href="style.css" />
 
-  <!-- Leaflet -->
+  <!-- Leaflet CSS & JS -->
   <link
     rel="stylesheet"
     href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
   />
   <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
 
-  <!-- Firebase -->
+  <!-- Firebase SDKs -->
   <script src="https://www.gstatic.com/firebasejs/9.21.0/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.21.0/firebase-auth-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.21.0/firebase-firestore-compat.js"></script>
@@ -26,8 +26,9 @@
   </header>
 
   <div class="layout">
+    <!-- MAIN CONTENT -->
     <main id="main-content">
-      <!-- login -->
+      <!-- Login -->
       <div id="login-screen" class="card">
         <h2>Sign Up or Log In</h2>
         <input type="email" id="email" placeholder="you@example.com" />
@@ -37,8 +38,9 @@
         <p id="login-msg"></p>
       </div>
 
-      <!-- journal + map -->
+      <!-- Journal + Insights -->
       <div id="journal-screen" class="hidden">
+        <!-- Insights Map -->
         <div id="insights-box" class="card">
           <h2>Insights</h2>
           <div id="map"></div>
@@ -47,6 +49,7 @@
           </p>
         </div>
 
+        <!-- New Entry -->
         <div id="new-entry-box" class="card">
           <h2>New Entry</h2>
           <select id="type">
@@ -72,6 +75,7 @@
           <p id="entry-msg"></p>
         </div>
 
+        <!-- My Journal -->
         <div id="journal-box" class="card">
           <h2>My Journal</h2>
           <ul id="entries"></ul>
@@ -79,6 +83,7 @@
       </div>
     </main>
 
+    <!-- RIGHT-SIDEBAR -->
     <aside id="feed-screen">
       <div id="logout-box" class="card hidden">
         <button id="logout">Logout</button>
@@ -90,8 +95,9 @@
     </aside>
   </div>
 
+  <!-- ─── SCRIPT: Firebase + UI + Map ─────────────────────────────────────────── -->
   <script>
-    // ─── Firebase Setup ────────────────────────────────────────────────────
+    // Firebase config + init
     const firebaseConfig = {
       apiKey: "AIzaSyD3cdFU4K-LiPtkbVcQMmNp1701dvOEFW8",
       authDomain: "vision-journal-proto.firebaseapp.com",
@@ -104,7 +110,7 @@
     const auth = firebase.auth();
     const db   = firebase.firestore();
 
-    // ─── UI References ──────────────────────────────────────────────────────
+    // UI refs
     const loginScreen   = document.getElementById('login-screen');
     const journalScreen = document.getElementById('journal-screen');
     const logoutBox     = document.getElementById('logout-box');
@@ -123,7 +129,7 @@
     const entriesList   = document.getElementById('entries');
     const feedEntries   = document.getElementById('feed-entries');
 
-    // ─── Map Init ────────────────────────────────────────────────────────────
+    // Leaflet map init
     let map, leafletReady = false;
     try {
       map = L.map('map').setView([20,0],2);
@@ -131,28 +137,25 @@
         attribution: '&copy; OpenStreetMap contributors'
       }).addTo(map);
       leafletReady = true;
-    } catch(e) {
-      console.warn('Leaflet init failed:',e);
-    }
+    } catch(e){ console.warn('Leaflet init failed:',e); }
 
-    // ─── Auth Handlers ──────────────────────────────────────────────────────
+    // Auth handlers
     signupBtn.onclick = () =>
-      auth.createUserWithEmailAndPassword(emailInput.value,passwordInput.value)
-        .catch(e=>loginMsg.textContent=e.message);
+      auth.createUserWithEmailAndPassword(emailInput.value, passwordInput.value)
+        .catch(e => loginMsg.textContent = e.message);
 
     loginBtn.onclick = () =>
-      auth.signInWithEmailAndPassword(emailInput.value,passwordInput.value)
-        .catch(e=>loginMsg.textContent=e.message);
+      auth.signInWithEmailAndPassword(emailInput.value, passwordInput.value)
+        .catch(e => loginMsg.textContent = e.message);
 
-    logoutBtn.onclick = ()=>auth.signOut();
+    logoutBtn.onclick = () => auth.signOut();
 
-    auth.onAuthStateChanged(user=>{
-      console.log('AUTH CHANGE → user:', user ? user.uid : null);
-      if(user){
+    auth.onAuthStateChanged(user => {
+      if (user) {
         loginScreen.classList.add('hidden');
         journalScreen.classList.remove('hidden');
         logoutBox.classList.remove('hidden');
-        if(leafletReady) setTimeout(()=>map.invalidateSize(),200);
+        if (leafletReady) setTimeout(()=>map.invalidateSize(),200);
         loadJournal();
       } else {
         loginScreen.classList.remove('hidden');
@@ -160,116 +163,148 @@
         logoutBox.classList.add('hidden');
       }
       loadPublicFeed();
-      if(leafletReady) plotPublicMarkers();
+      if (leafletReady) plotPublicMarkers();
     });
 
-    // ─── Location Detection ─────────────────────────────────────────────────
-    detectBtn.onclick = ()=>{
-      locationDisp.textContent='Detecting…';
+    // Detect location
+    detectBtn.onclick = () => {
+      locationDisp.textContent = 'Detecting…';
       fetch('https://ipapi.co/json/')
-        .then(r=>r.json())
-        .then(d=>{
-          console.log('Auto‐detect result',d);
-          if(d.country_name && d.region){
-            locationDisp.textContent=`${d.region}, ${d.country_name}`;
-            countryInput.value=d.country_name;
-            stateInput.value=d.region;
+        .then(r => r.json())
+        .then(d => {
+          if (d.country_name && d.region) {
+            locationDisp.textContent = `${d.region}, ${d.country_name}`;
+            countryInput.value = d.country_name;
+            stateInput.value   = d.region;
             manualDiv.classList.add('hidden');
           } else throw 'incomplete';
         })
-        .catch(_=>{
-          locationDisp.textContent='Auto‐detect failed; enter manually';
+        .catch(_ => {
+          locationDisp.textContent = 'Auto-detect failed; enter manually';
           manualDiv.classList.remove('hidden');
         });
     };
 
-    // ─── Save Entry ─────────────────────────────────────────────────────────
-    saveBtn.onclick = ()=>{
-      /* ... your existing save logic ... */
-      console.log('Saving entry (omitted for brevity)');
+    // Save entry → private + publicEntries
+    saveBtn.onclick = async () => {
+      const type     = document.getElementById('type').value;
+      const text     = document.getElementById('text').value;
+      const tags     = document.getElementById('tags').value
+                        .split(',').map(s=>s.trim()).filter(Boolean);
+      const isPublic = document.getElementById('isPublic').checked;
+      const country  = countryInput.value.trim();
+      const state    = stateInput.value.trim();
+      if (!country || !state) {
+        alert('Please detect or enter your country and state.');
+        return;
+      }
+
+      const payload = {
+        userId:    auth.currentUser.uid,
+        type, text, tags, isPublic,
+        location:  { country, state },
+        createdAt: firebase.firestore.FieldValue.serverTimestamp()
+      };
+
+      try {
+        // 1) Save to user's own entries
+        await db
+          .collection('visions')
+          .doc(auth.currentUser.uid)
+          .collection('entries')
+          .add(payload);
+
+        // 2) If public, duplicate into top-level publicEntries
+        if (isPublic) {
+          await db
+            .collection('publicEntries')
+            .add(payload);
+        }
+
+        document.getElementById('entry-msg').textContent = 'Saved!';
+        loadJournal();
+        loadPublicFeed();
+        plotPublicMarkers();
+      } catch (e) {
+        console.error('Save failed:', e);
+        document.getElementById('entry-msg').textContent = 'Save failed.';
+      }
     };
 
-    // ─── Load Personal Journal ──────────────────────────────────────────────
-    function loadJournal(){
-      console.log('Loading personal journal...');
-      entriesList.innerHTML='';
-      db.collection('visions').doc(auth.currentUser.uid)
-        .collection('entries').orderBy('createdAt','desc').get()
-        .then(snap=>{
-          console.log(`  → ${snap.size} personal entries`);
-          snap.forEach(d=>{
-            const data=d.data();
-            const li=document.createElement('li');
-            li.textContent=`${data.type}: ${data.text}`;
+    // Load personal journal
+    function loadJournal() {
+      entriesList.innerHTML = '';
+      db.collection('visions')
+        .doc(auth.currentUser.uid)
+        .collection('entries')
+        .orderBy('createdAt','desc')
+        .get()
+        .then(snap => {
+          snap.forEach(doc => {
+            const d = doc.data();
+            const li = document.createElement('li');
+            li.textContent = `${d.type}: ${d.text}`;
             entriesList.append(li);
           });
         })
-        .catch(e=>console.error('Journal load error',e));
+        .catch(console.error);
     }
 
-    // ─── Load Public Feed ───────────────────────────────────────────────────
-    function loadPublicFeed(){
-      console.log('Loading public feed...');
-      feedEntries.innerHTML='';
-      let q = db.collectionGroup('entries')
-                .where('isPublic','==',true);
-      if(!auth.currentUser){
-        console.log('  → no user → limiting to 10');
-        q=q.limit(10);
-      }
-      q.get()
-       .then(snap=>{
-         console.log(`  → public feed docs: ${snap.size}`);
-         snap.forEach(d=>{
-           const data=d.data();
-           const loc=data.location||{};
-           const locText=loc.state&&loc.country?` (${loc.state}, ${loc.country})`:'';
-           const li=document.createElement('li');
-           li.textContent=`${data.type}: ${data.text}${locText}`;
-           feedEntries.append(li);
+    // Load public feed from flat publicEntries
+    function loadPublicFeed() {
+      feedEntries.innerHTML = '';
+      let ref = db
+        .collection('publicEntries')
+        .orderBy('createdAt','desc');
+      if (!auth.currentUser) ref = ref.limit(10);
+
+      ref.get()
+         .then(snap => {
+           if (snap.empty) {
+             feedEntries.innerHTML = '<p>No public entries.</p>';
+             return;
+           }
+           snap.forEach(doc => {
+             const d = doc.data();
+             const loc = d.location || {};
+             const locText = loc.state
+                           ? ` (${loc.state}, ${loc.country})`
+                           : '';
+             const li = document.createElement('li');
+             li.textContent = `${d.type}: ${d.text}${locText}`;
+             feedEntries.append(li);
+           });
+         })
+         .catch(e => {
+           console.error('Public feed load error:', e);
+           feedEntries.innerHTML = '<p>Error loading public feed.</p>';
          });
-         if(!feedEntries.children.length){
-           feedEntries.innerHTML='<p>No public entries.</p>';
-         }
-       })
-       .catch(e=>{
-         console.error('Error fetching public entries:',e);
-         feedEntries.innerHTML='<p>Error loading public feed</p>';
-       });
     }
 
-    // ─── Plot Public Markers ────────────────────────────────────────────────
-    function plotPublicMarkers(){
-      console.log('plotPublicMarkers() start');
-      if(!leafletReady){
-        console.log('  → leaflet not ready');
-        return;
-      }
-      map.eachLayer(l=>{
-        if(l instanceof L.Marker) map.removeLayer(l);
+    // Plot public markers from publicEntries
+    function plotPublicMarkers() {
+      if (!leafletReady) return;
+      map.eachLayer(l => {
+        if (l instanceof L.Marker) map.removeLayer(l);
       });
-      db.collectionGroup('entries')
-        .where('isPublic','==',true)
+
+      db.collection('publicEntries')
+        .where('location.country','!=','')
         .get()
-        .then(snap=>{
-          console.log(`  → marker docs: ${snap.size}`);
-          snap.forEach(d=>{
-            const data=d.data();
-            console.log(`    doc ${d.id} →`, data.lat, data.lon);
-            if(typeof data.lat==='number' && typeof data.lon==='number'){
-              L.marker([data.lat,data.lon])
-               .addTo(map)
-               .bindPopup(
-                 `<strong>${data.type}</strong>: ${data.text}<br>`+
-                 `<em>${data.location.state}, ${data.location.country}</em>`
-               );
-            } else {
-              console.warn(`    no coords for ${d.id}`);
+        .then(snap => {
+          snap.forEach(doc => {
+            const d = doc.data();
+            if (d.lat && d.lon) {
+              L.marker([d.lat,d.lon])
+                .addTo(map)
+                .bindPopup(
+                  `<strong>${d.type}</strong>: ${d.text}<br>` +
+                  `<em>${d.location.state}, ${d.location.country}</em>`
+                );
             }
           });
         })
-        .catch(e=>console.error('Error in plotPublicMarkers():',e))
-        .finally(()=>console.log('plotPublicMarkers() end'));
+        .catch(e => console.error('Marker plot error:', e));
     }
   </script>
 </body>
