--- a/index.html
+++ b/index.html
@@ -9,10 +9,8 @@
   <link rel="stylesheet" href="style.css" />
 
   <!-- Leaflet CSS & JS -->
-  <link
-    rel="stylesheet"
-    href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"
-  />
+  <link rel="stylesheet"
+        href="https://unpkg.com/leaflet@1.9.3/dist/leaflet.css"/>
   <script src="https://unpkg.com/leaflet@1.9.3/dist/leaflet.js"></script>
 
   <!-- Firebase SDKs -->
@@ -21,14 +19,11 @@
   <script src="https://www.gstatic.com/firebasejs/9.21.0/firebase-firestore-compat.js"></script>
 </head>
 <body>
-  <header class="card">
-    <h1>Vision Journal</h1>
-  </header>
+  <header class="card"><h1>Vision Journal</h1></header>
 
   <div class="layout">
-    <!-- MAIN CONTENT -->
+    <!-- MAIN -->
     <main id="main-content">
-      <!-- Login -->
       <div id="login-screen" class="card">
         <h2>Sign Up or Log In</h2>
         <input type="email" id="email" placeholder="you@example.com" />
@@ -38,9 +33,7 @@
         <p id="login-msg"></p>
       </div>
 
-      <!-- Journal + Insights -->
       <div id="journal-screen" class="hidden">
-        <!-- Insights Map -->
         <div id="insights-box" class="card">
           <h2>Insights</h2>
           <div id="map"></div>
@@ -49,7 +42,6 @@
           </p>
         </div>
 
-        <!-- New Entry -->
         <div id="new-entry-box" class="card">
           <h2>New Entry</h2>
           <select id="type">
@@ -67,15 +59,18 @@
             (no location yet)
           </p>
           <div id="manual-location" class="hidden">
-            <input type="text" id="country-input" placeholder="Country (required)" />
-            <input type="text" id="state-input"   placeholder="State/Region (required)" />
+            <input type="text"
+                   id="country-input"
+                   placeholder="Country (required)" />
+            <input type="text"
+                   id="state-input"
+                   placeholder="State/Region (required)" />
           </div>
 
           <button id="save-entry">Save</button>
           <p id="entry-msg"></p>
         </div>
 
-        <!-- My Journal -->
         <div id="journal-box" class="card">
           <h2>My Journal</h2>
           <ul id="entries"></ul>
@@ -83,7 +78,7 @@
       </div>
     </main>
 
-    <!-- RIGHT-SIDEBAR -->
+    <!-- SIDEBAR -->
     <aside id="feed-screen">
       <div id="logout-box" class="card hidden">
         <button id="logout">Logout</button>
@@ -95,11 +90,10 @@
     </aside>
   </div>
 
-  <!-- ─── SCRIPT: Firebase + UI + Map ─────────────────────────────────────────── -->
   <script>
-    // Firebase config + init
+    // ── Firebase Init ─────────────────────────
     const firebaseConfig = {
-      apiKey: "AIzaSyD3cdFU4K-LiPtkbVcQMmNp1701dvOEFW8",
+      apiKey: "...",
       authDomain: "vision-journal-proto.firebaseapp.com",
       projectId: "vision-journal-proto",
       storageBucket: "vision-journal-proto.appspot.com",
@@ -107,10 +101,9 @@
       appId: "1:1063775796504:web:8effe01d8a1272afc9326d"
     };
     firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
-    const db   = firebase.firestore();
+    const auth = firebase.auth(), db = firebase.firestore();
 
-    // UI refs
+    // ── UI Refs ───────────────────────────────
     const loginScreen   = document.getElementById('login-screen');
     const journalScreen = document.getElementById('journal-screen');
     const logoutBox     = document.getElementById('logout-box');
@@ -129,25 +122,23 @@
     const entriesList   = document.getElementById('entries');
     const feedEntries   = document.getElementById('feed-entries');
 
-    // Leaflet map init
+    // ── Leaflet Map ───────────────────────────
     let map, leafletReady = false;
     try {
       map = L.map('map').setView([20,0],2);
       L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-        attribution: '&copy; OpenStreetMap contributors'
+        attribution:'&copy; OpenStreetMap'
       }).addTo(map);
       leafletReady = true;
-    } catch(e){ console.warn('Leaflet init failed:',e); }
+    } catch(e){ console.warn(e) }
 
-    // Auth handlers
+    // ── Auth ───────────────────────────────────
     signupBtn.onclick = () =>
       auth.createUserWithEmailAndPassword(emailInput.value, passwordInput.value)
-        .catch(e => loginMsg.textContent = e.message);
-
+          .catch(e => loginMsg.textContent = e.message);
     loginBtn.onclick = () =>
       auth.signInWithEmailAndPassword(emailInput.value, passwordInput.value)
-        .catch(e => loginMsg.textContent = e.message);
-
+          .catch(e => loginMsg.textContent = e.message);
     logoutBtn.onclick = () => auth.signOut();
 
     auth.onAuthStateChanged(user => {
@@ -166,18 +157,18 @@
       if (leafletReady) plotPublicMarkers();
     });
 
-    // Detect location
+    // ── Location Detection ─────────────────────
     detectBtn.onclick = () => {
       locationDisp.textContent = 'Detecting…';
       fetch('https://ipapi.co/json/')
-        .then(r => r.json())
+        .then(r=>r.json())
         .then(d => {
           if (d.country_name && d.region) {
             locationDisp.textContent = `${d.region}, ${d.country_name}`;
             countryInput.value = d.country_name;
             stateInput.value   = d.region;
             manualDiv.classList.add('hidden');
-          } else throw 'incomplete';
+          } else throw '';
         })
         .catch(_ => {
           locationDisp.textContent = 'Auto-detect failed; enter manually';
@@ -185,7 +176,7 @@
         });
     };
 
-    // Save entry → private + publicEntries
+    // ── Save Entry + Geocode & Duplicate ──────
     saveBtn.onclick = async () => {
       const type     = document.getElementById('type').value;
       const text     = document.getElementById('text').value;
@@ -194,117 +185,110 @@
       const isPublic = document.getElementById('isPublic').checked;
       const country  = countryInput.value.trim();
       const state    = stateInput.value.trim();
-      if (!country || !state) {
-        alert('Please detect or enter your country and state.');
+      if (!country||!state) {
+        alert('Please detect or enter country & state.');
         return;
       }
 
-      const payload = {
-        userId:    auth.currentUser.uid,
+      // Common payload
+      let payload = {
+        userId: auth.currentUser.uid,
         type, text, tags, isPublic,
-        location:  { country, state },
+        location:{country, state},
         createdAt: firebase.firestore.FieldValue.serverTimestamp()
       };
 
       try {
-        // 1) Save to user's own entries
-        await db
-          .collection('visions')
+        // 1) Save private
+        await db.collection('visions')
           .doc(auth.currentUser.uid)
           .collection('entries')
           .add(payload);
 
-        // 2) If public, duplicate into top-level publicEntries
+        // 2) If public, geocode then duplicate
         if (isPublic) {
-          await db
-            .collection('publicEntries')
-            .add(payload);
+          // call Nominatim
+          const q = encodeURIComponent(`${state}, ${country}`);
+          const res = await fetch(
+            `https://nominatim.openstreetmap.org/search?format=json&limit=1&q=${q}`
+          ).then(r=>r.json());
+          if (res && res[0]) {
+            payload.lat = parseFloat(res[0].lat);
+            payload.lon = parseFloat(res[0].lon);
+          }
+          // write to flat publicEntries
+          await db.collection('publicEntries').add(payload);
         }
 
         document.getElementById('entry-msg').textContent = 'Saved!';
-        loadJournal();
-        loadPublicFeed();
-        plotPublicMarkers();
-      } catch (e) {
-        console.error('Save failed:', e);
+        loadJournal(); loadPublicFeed(); plotPublicMarkers();
+      } catch(e) {
+        console.error(e);
         document.getElementById('entry-msg').textContent = 'Save failed.';
       }
     };
 
-    // Load personal journal
-    function loadJournal() {
+    // ── Load Personal Journal ───────────────────
+    function loadJournal(){
       entriesList.innerHTML = '';
       db.collection('visions')
         .doc(auth.currentUser.uid)
         .collection('entries')
         .orderBy('createdAt','desc')
         .get()
-        .then(snap => {
-          snap.forEach(doc => {
-            const d = doc.data();
-            const li = document.createElement('li');
-            li.textContent = `${d.type}: ${d.text}`;
-            entriesList.append(li);
-          });
-        })
+        .then(snap => snap.forEach(doc=>{
+          const d=doc.data();
+          const li=document.createElement('li');
+          li.textContent=`${d.type}: ${d.text}`;
+          entriesList.append(li);
+        }))
         .catch(console.error);
     }
 
-    // Load public feed from flat publicEntries
-    function loadPublicFeed() {
-      feedEntries.innerHTML = '';
-      let ref = db
-        .collection('publicEntries')
-        .orderBy('createdAt','desc');
-      if (!auth.currentUser) ref = ref.limit(10);
-
+    // ── Load Public Feed ───────────────────────
+    function loadPublicFeed(){
+      feedEntries.innerHTML='';
+      let ref = db.collection('publicEntries')
+                  .orderBy('createdAt','desc');
+      if (!auth.currentUser) ref=ref.limit(10);
       ref.get()
-         .then(snap => {
-           if (snap.empty) {
-             feedEntries.innerHTML = '<p>No public entries.</p>';
+         .then(snap=>{
+           if(snap.empty){
+             feedEntries.innerHTML='<p>No public entries.</p>';
              return;
            }
-           snap.forEach(doc => {
-             const d = doc.data();
-             const loc = d.location || {};
-             const locText = loc.state
-                           ? ` (${loc.state}, ${loc.country})`
-                           : '';
-             const li = document.createElement('li');
-             li.textContent = `${d.type}: ${d.text}${locText}`;
+           snap.forEach(doc=>{
+             const d=doc.data();
+             const loc=d.location||{};
+             const locText=loc.state?` (${loc.state}, ${loc.country})`:'';
+             const li=document.createElement('li');
+             li.textContent=`${d.type}: ${d.text}${locText}`;
              feedEntries.append(li);
            });
          })
-         .catch(e => {
-           console.error('Public feed load error:', e);
-           feedEntries.innerHTML = '<p>Error loading public feed.</p>';
+         .catch(e=>{
+           console.error(e);
+           feedEntries.innerHTML='<p>Error loading public feed.</p>';
          });
     }
 
-    // Plot public markers from publicEntries
-    function plotPublicMarkers() {
-      if (!leafletReady) return;
-      map.eachLayer(l => {
-        if (l instanceof L.Marker) map.removeLayer(l);
-      });
-
+    // ── Plot Public Markers ────────────────────
+    function plotPublicMarkers(){
+      if(!leafletReady) return;
+      map.eachLayer(l=>{ if(l instanceof L.Marker) map.removeLayer(l) });
       db.collection('publicEntries')
-        .where('location.country','!=','')
+        .where('lat','!=',null)
         .get()
-        .then(snap => {
-          snap.forEach(doc => {
-            const d = doc.data();
-            if (d.lat && d.lon) {
-              L.marker([d.lat,d.lon])
-                .addTo(map)
-                .bindPopup(
-                  `<strong>${d.type}</strong>: ${d.text}<br>` +
-                  `<em>${d.location.state}, ${d.location.country}</em>`
-                );
-            }
-          });
-        })
-        .catch(e => console.error('Marker plot error:', e));
+        .then(snap=>snap.forEach(doc=>{
+          const d=doc.data();
+          L.marker([d.lat,d.lon])
+           .addTo(map)
+           .bindPopup(
+             `<strong>${d.type}</strong>: ${d.text}<br>`+
+             `<em>${d.location.state}, ${d.location.country}</em>`
+           );
+        }))
+        .catch(console.error);
     }
   </script>
 </body>
